--- a/chrome_ex/options.html
+++ b/chrome_ex/options.html
@@ -151,7 +151,7 @@
         <img src="master_splinter.enc" style="width: 20%; border-radius: 20%;" id="main_logo">
 
         <!-- Link to Website -->
-        <a href="https://yourwebsite.com" class="link">Visit our website</a>
+        <a href="https://truth-keeper-inky.vercel.app/" class="link">Visit our website</a>
     </div>
 
     <!-- Custom alert modal -->
