--- a/truth_keeper_chrome_ex/options.html
+++ b/truth_keeper_chrome_ex/options.html
@@ -147,11 +147,11 @@
         <!-- Save Button -->
         <button id="save-button">Save</button>
         
-        <h4>Do you want to build a snowman?</h4>
-        <img src="master_splinter.enc" style="width: 20%; border-radius: 20%;" id="main_logo">
+        <h3>Truth Keeper © 2024-2025</h3>
+        <h4>Matan Shemesh & Ariel Cohen</h4>
 
         <!-- Link to Website -->
-        <a href="https://truth-keeper-inky.vercel.app/" class="link">Visit our website</a>
+        <h4><a href="https://truth-keeper-inky.vercel.app/" class="link">Visit our website</a></h4>
     </div>
 
     <!-- Custom alert modal -->
