Add testing files and update documentation link

--- a/land_page/index.html
+++ b/land_page/index.html
@@ -305,7 +305,7 @@
             <a href="https://chromewebstore.google.com/search/Truth%20Keeper" class="block" target="_blank" rel="noopener noreferrer">
                 <h3>Download Our Chrome Extension</h3>
             </a>
-            <a href="https://docs.google.com/document/d/1E6FPia8dwIuyFMmJ8wE1sApUGY9lUDEVKctyjohC_DE/edit#heading=h.cjslg98g2vvn" class="block" target="_blank" rel="noopener noreferrer">
+            <a href="https://docs.google.com/document/d/1_3z56Oxrr_r3GuyO1HgwGk5-JkLH-cL1vEMWGmbEF2M" class="block" target="_blank" rel="noopener noreferrer">
                 <h3>Project Documentation</h3>
             </a>
             <a href="https://docs.google.com/presentation/d/1DoHMffY5pto7tczGccONYOmIKjGva2xw/edit#slide=id.p1" class="block" target="_blank" rel="noopener noreferrer">
